--- a/client/src/components/Room/index.css
+++ b/client/src/components/Room/index.css
@@ -1,17 +1,34 @@
-.room {
-    width: calc(20vw - 10rem / 5);
-    height: calc(20vw - 10rem / 5);
+.playroom {
+    width: 100%;
+    height: 100%;
 
-    margin-right: 1rem;
-    margin-bottom: 1rem;
+    overflow: hidden;
+
+    background-color: #202020;
+}
+
+.playroom-back {
+    width: 5rem;
+    height: 5rem;
+
+    margin-right: calc(100% - 5rem);
+    padding: 1rem;
 
     position: relative;
     float: left;
 
-    background-color: #222222;
-    border-radius: 1rem;
+    box-sizing: border-box;
 }
 
-.room:nth-child(5n) {
-    margin-right: 0;
+.playroom-board {
+    width: 18rem;
+    height: 36rem;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, calc(-50% + 3rem));
+
+    border: solid #353535 0.1rem;
+    box-sizing: border-box;
 }
